welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:9: error: ';' expected but 'else' found.
  else {
  ^